objects/FinServ__FinancialAccount__c.object
<CustomObject>
    <description>A client&apos;s financial account, such as an investment account, bank account, or insurance policy.</description>
    <fields>
        <fullName>AW_AUMSourceExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Asset Under Management Unique External ID</description>
        <externalId>true</externalId>
        <label>AUM Source External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_AccessibleAmount__c</fullName>
        <description>This field indicates the amount which is accessible for the account</description>
        <label>Accessible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_ActualPremiumAmount__c</fullName>
        <label>Actual Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_AdvanceAvailable__c</fullName>
        <description>This indicates the amount of advance which is available</description>
        <label>Advance Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_AdvisorFees__c</fullName>
        <description>This field is used to store the percentage of fees for Adviser</description>
        <label>Advisor Fees</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_AnnualContributionIncreaseACI__c</fullName>
        <description>Used for integration to populate Automatic Contribution Increase (ACI) from source systems (Compass/Lifestyle). Field Label was updated from Annual Contribution Increase (ACI) to Automatic Contribution Increase (ACI) however API name was not updated to reduce impact on code.</description>
        <label>Automatic Contribution Increase (ACI)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CurrentValue__c</fullName>
        <description>This indicates the current value of the financial account</description>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FinancialGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field on Financial Account</description>
        <label>Financial Goal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FinServ__FinancialGoal__c.FinServ__PrimaryOwner__c</field>
                <operation>equals</operation>
                <valueField>$Source.FinServ__PrimaryOwner__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FinServ__FinancialGoal__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_FundValue__c</fullName>
        <description>This field indicates the  value of the account</description>
        <label>Fund Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_IllustratedValueDate__c</fullName>
        <description>This field is used to store the date in which the value is illustrated</description>
        <label>Illustrated Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_IllustrativeMaturityValue__c</fullName>
        <description>This represents the estimated Maturity Value</description>
        <label>Illustrative Maturity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_IncomeFrequency__c</fullName>
        <description>This field represents the income frequency from account</description>
        <label>Income Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_InvestmentValue__c</fullName>
        <description>This indicates the net value of investment for the account</description>
        <label>Investment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_LastIncomeAmount__c</fullName>
        <description>This indicates the amount received as income from account</description>
        <label>Last Income Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_LastIncomeDate__c</fullName>
        <description>This field represents the date of last income from account</description>
        <label>Last Income Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Last_Updated_Date_from_Source__c</fullName>
        <description>This field represents the date of last update from source system</description>
        <label>Source Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(NOT(ISBLANK(FinServ__PrimaryOwner__r.AW_ParentAccount__c)),
											FinServ__PrimaryOwner__r.AW_ParentAccount__c,FinServ__PrimaryOwner__c)</formula>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Accounts (MasterAccount)</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_MaturityDate__c</fullName>
        <description>This field is used to store the maturity date of the account</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_NetContribution__c</fullName>
        <description>Net amount of contribution</description>
        <label>Net Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Owner_UACFID__c</fullName>
        <formula>Owner:User.AW_UACFID__c</formula>
        <label>Owner UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent Account Owner Id</description>
        <formula>IF(NOT(ISNULL(FinServ__PrimaryOwner__r.Id)),FinServ__PrimaryOwner__r.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PlatformFees__c</fullName>
        <description>Percent of Platform Fees</description>
        <label>Platform Fees</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_ProductCategory__c</fullName>
        <description>This field  indicates if the product is investment or retirement</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ProductSubCategory__c</fullName>
        <description>Select Product Sub Category</description>
        <label>Product Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LISP</fullName>
                </value>
                <value>
                    <fullName>Preserver</fullName>
                </value>
                <value>
                    <fullName>Endowment</fullName>
                </value>
                <value>
                    <fullName>Living Annuity</fullName>
                </value>
                <value>
                    <fullName>Retirement Annuity</fullName>
                </value>
                <value>
                    <fullName>Retirement Annuity Life Cover</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>LSIP</fullName>
                    <isActive>false</isActive>
                    <label>LSIP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ProductTypeCode__c</fullName>
        <description>This represents the type code for the product</description>
        <label>Product Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ProductWrapper__c</fullName>
        <description>This indicates the name of the product wrapper</description>
        <label>Product Wrapper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PrototypeCode__c</fullName>
        <description>This field specifies the prototype code for this account</description>
        <label>Prototype Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_RD_DateOpened__c</fullName>
        <description>This Field replicates the Date Opened field ( FinServ__OpenDate__c ). This was created in order to use this as a Dashboard filter(Converted from Date data type to Date/Time data type).</description>
        <formula>DATETIMEVALUE( FinServ__OpenDate__c )</formula>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_RepayableAmount__c</fullName>
        <description>This indicates the net amount which needs to be repaid</description>
        <label>Repayable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Roles__c</fullName>
        <description>This indicates the role of the financial account</description>
        <label>Roles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AW_ShareWithMyAdviser__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows the community user to share financial accounts with the adviser</description>
        <label>Share with my adviser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>This indicates the System from which this Financial Account was sourced</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_Source_System_Names</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_StatusReason__c</fullName>
        <description>This indicates the reason for the status of the financial account</description>
        <label>Status Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SurrenderValue__c</fullName>
        <description>This indicates the net amount required to surrender the account</description>
        <label>Surrender Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Target_Return__c</fullName>
        <description>Percent of Target Return</description>
        <label>Target Return</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_TotalInvestmentAmount__c</fullName>
        <description>This indicates the net amount of the investment</description>
        <label>Total Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalPortfolioValue__c</fullName>
        <description>This indicates the total sum of the financial holdings related to this financial account</description>
        <label>Total Portfolio Value</label>
        <summarizedField>FinServ__FinancialHolding__c.FinServ__MarketValue__c</summarizedField>
        <summaryForeignKey>FinServ__FinancialHolding__c.FinServ__FinancialAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_UpdatedByMulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Updated by MuleSoft</description>
        <label>Updated by MuleSoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_ValueAsAt__c</fullName>
        <description>This field is used to capture the date time for the Current Value from Full View</description>
        <label>Value As At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMN_AdhocPremiumAmount__c</fullName>
        <description>Used for integration to populate Adhoc Premium amount  from source systems (Compass/Lifestyle).</description>
        <label>Adhoc Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_AdvanceType__c</fullName>
        <description>Used for integration to populate Advance Type Code from source systems (Compass/Lifestyle).</description>
        <label>Advance Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_AidsInclusionIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Aids Inclusion Indicator from source systems (Compass/Lifestyle).</description>
        <label>Aids Inclusion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_AnnualIncomePercentage__c</fullName>
        <description>Used for integration to populate Escal_Perc as Annual Income % from source systems (Compass/Lifestyle).</description>
        <label>Annual Income %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_AssociatedContracts__c</fullName>
        <description>Used for integration to populate Associated Contract number(s) from source systems (Compass/Lifestyle).</description>
        <label>Associated Contracts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_AutomaticBenefitIncreaseAmount__c</fullName>
        <description>Used for integration to populate ABI amount from source systems (Compass/Lifestyle).</description>
        <label>Automatic Benefit Increase Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_AutomaticContributionIncreaseAmt__c</fullName>
        <description>Used for integration to populate Automatic Contribution Increase Amount (ACI) from source systems (Compass/Lifestyle)</description>
        <label>Automatic Contribution Increase Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BankAccountHolderName__c</fullName>
        <description>Used for integration to populate Account Holder from source systems (Compass/Lifestyle)</description>
        <label>Bank Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BankAccountNumber__c</fullName>
        <description>Used for integration to populate Account Number from source systems (Compass/Lifestyle)</description>
        <label>Bank Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BankAccountType__c</fullName>
        <description>Used for integration to populate Account Type from source systems (Compass/Lifestyle)</description>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
                <value>
                    <fullName>Transmission Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_BankBranchCode__c</fullName>
        <description>Used for integration to populate Branch Code from source systems (Compass/Lifestyle)</description>
        <label>Bank Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BankName__c</fullName>
        <description>Used for integration to populate Bank Name from source systems (Compass/Lifestyle)</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CapitalContentAmount__c</fullName>
        <description>Used for integration to populate Capital Content Amount from source systems (Compass/Lifestyle).</description>
        <label>Capital Content Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_CessionaryInitials__c</fullName>
        <description>Used for integration to populate CessionaryInitials from source systems (Compass/Lifestyle)</description>
        <label>Cessionary Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CessionaryName__c</fullName>
        <description>Used for integration to populate Cessionary Name from source systems (Compass/Lifestyle)</description>
        <label>Cessionary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CessionaryTitle__c</fullName>
        <description>Used for integration to populate CessionaryTitle from source systems (Compass/Lifestyle)</description>
        <label>Cessionary Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CessionaryType__c</fullName>
        <description>Used for integration to populate Cessionary Type from source systems (Compass/Lifestyle)</description>
        <label>Cessionary Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CommutedValueOfAnnuity__c</fullName>
        <description>Used for integration to populate CommutedValue  from source systems (Compass/Lifestyle)</description>
        <label>Commuted Value Of Annuity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_ConditionalPartRedemptionTaken__c</fullName>
        <description>Used for integration to populate Conditional Part Redemption Taken from source systems (Compass/Lifestyle).</description>
        <label>Conditional Part Redemption Taken</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_ContributionAmount__c</fullName>
        <description>Used for integration to populate Actual Premium Amount from source systems (Compass/Lifestyle)</description>
        <label>Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_CoverType__c</fullName>
        <description>Used for integration to populate Cover Type  from source systems (Compass/Lifestyle).</description>
        <label>Cover Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CreditACIPercentage__c</fullName>
        <description>Used for integration to populate Credit_Aci_Perc as Annual Income % from source systems (Compass/Lifestyle).</description>
        <label>Credit ACI %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_CurrencyIndicator__c</fullName>
        <description>Used for integration to populate Currency Indicator from source systems (Compass/Lifestyle).</description>
        <label>Currency Indicator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_DeathValue__c</fullName>
        <description>Used for integration to populate Gross Death Value from source systems (Compass/Lifestyle).</description>
        <label>Death Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_DebitDay__c</fullName>
        <description>Used for integration to populate Debit Day from source systems (Compass/Lifestyle)</description>
        <label>Debit Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_EIFGuidelineAllocationIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate the Guideline Allocation Indicator from source (Compass).</description>
        <label>EIF Guideline Allocation Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_EIFTotalInvestedAmountToDate__c</fullName>
        <description>Used for integration to populate Total Invested Amount to date in Exact Income Fund portfolio from source systems (Compass)</description>
        <label>EIF Total Invested Amount to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_EarlyRetirementValue__c</fullName>
        <description>Used for integration to populate EarlyRetirementValue  from source systems (Compass/Lifestyle)</description>
        <label>Early Retirement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_EmployeeNumber__c</fullName>
        <description>Used for integration to populate Employee Number for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ExactIncomeCapitalValue__c</fullName>
        <description>Used for integration to populate Exact Income Capital Value from source systems (Compass).</description>
        <label>Exact Income Capital Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_ExactIncomeFundFrequency__c</fullName>
        <description>Used for integration to populate Exact Income Fund Frequency from source systems (Compass/Lifestyle)</description>
        <label>Exact Income Fund Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Bi-Annually</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_ExactIncomeFundGuaranteedValue__c</fullName>
        <description>Used for integration to populate the Exact Income payable at retirement date from source systems (Compass).</description>
        <label>Exact Income Fund Guaranteed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_ExactIncomeFundType__c</fullName>
        <description>Used for integration to populate Exact Income Fund Type from source systems (Compass/Lifestyle).</description>
        <label>Exact Income Fund Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FacilityGroup__c</fullName>
        <description>Used for integration to populate Facility Group for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Facility Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FacilityName__c</fullName>
        <description>Used for integration to populate Facility Name for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FacilityNumber__c</fullName>
        <description>Used for integration to populate Facility Number for Stop Orders from source systems (Compass/Lifestyle)</description>
        <label>Facility Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FacilityType__c</fullName>
        <description>Used for integration to populate Facility Type for Stop Orders from source systems (Compass/Lifestyle).</description>
        <label>Facility Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FundName__c</fullName>
        <description>Used for integration to populate the Investment Fund Name.</description>
        <label>Fund Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FutureInvestmentFundName__c</fullName>
        <description>Used for integration to populate the Future Investment Fund Name.</description>
        <label>Future Investment Fund Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_FutureInvestmentFundPercentage__c</fullName>
        <description>Used for integration to populate the Future Investment Fund Percentage Split from source systems (Compass/Lifestyle).</description>
        <label>Future Investment Fund %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_GrossIncomePayable__c</fullName>
        <description>Used for integration to populate Deduction Amount as Gross Income Payable from source systems (Compass/Lifestyle).</description>
        <label>Gross Income Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_GrowthSharingPortion__c</fullName>
        <description>Used for integration to populate GrowthSharingPortion from source systems (Compass/Lifestyle)</description>
        <label>Growth Sharing Portion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_GrowthSharingTargetReturn__c</fullName>
        <description>Used for integration to populate GrowthSharingTargetReturn from source systems (Compass/Lifestyle)</description>
        <label>Growth Sharing Target Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_GuaranteeEndDate__c</fullName>
        <description>Used for integration to populate GuaranteeEndDate from source systems (Compass)</description>
        <label>Guarantee End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_GuaranteeExpiryDate__c</fullName>
        <description>Used for integration to populate the Guarantee Expiry Date from source systems (Compass/Lifestyle).</description>
        <label>Guarantee Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_GuaranteeStartDate__c</fullName>
        <description>Used for integration to populate GuaranteeStartDate from source systems (Compass)</description>
        <label>Guarantee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_GuaranteeValue__c</fullName>
        <description>Used for integration to populate GuaranteeValue  from source systems (Compass/Lifestyle)</description>
        <label>Guarantee Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_GuaranteedInvestmentAmount__c</fullName>
        <description>Used for integration to populate Guaranteed Investment Amount from source systems (Compass/Lifestyle)</description>
        <label>Guaranteed Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_HighWaterMarkGuarantee__c</fullName>
        <description>Used for integration to populate HighWaterMarkGuarantee from source systems (Compass)</description>
        <label>High Water Mark Guarantee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_IllustrativeRetirementAmount__c</fullName>
        <description>Used for integration to populate the Illustrative Retirement Amount from source systems (Compass/Lifestyle).</description>
        <label>Illustrative Retirement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>